--- a/package/zerobias/example-nextjs/styles/styles.scss
+++ b/package/zerobias/example-nextjs/styles/styles.scss
@@ -1016,6 +1016,8 @@ button {
 
 .demo-items-wrapper {
 
+  padding: 0 8%;
+
   h2 {
     display: block;
     border-bottom: 1px solid rgba(0, 0, 0, .12);
@@ -1040,6 +1042,7 @@ button {
     border-radius: 5px;
     transition: box-shadow .13s linear, transform .13s linear;
     background-color: #fff;
+    gap: 8px;
 
 
     &:hover {
@@ -1063,7 +1066,7 @@ button {
         text-decoration: none;
         display: flex;
         gap: 12px;
-        line-height: 40px;
+        line-height: 24px;
 
         &:hover {
           color: var(--action-color-primary-hover);
@@ -1071,7 +1074,7 @@ button {
       }
       span.item-title {
         font-size: 22px;
-        line-height: 40px;
+        line-height: 24px;
       }
       
     }
@@ -1082,6 +1085,7 @@ button {
       text-align: left;
       min-height: 40px;
       padding: 0 16px;
+      color: rgba(0, 0, 0, .54);
     }
 
     .item-actions {
