--- a/package/zerobias/example-nextjs/styles/styles.scss
+++ b/package/zerobias/example-nextjs/styles/styles.scss
@@ -906,6 +906,7 @@ button {
 
     .org-selector {
       width: 100%;
+      line-height: 22px;
 
       .select__control {
         .select__single-value {
@@ -1015,8 +1016,14 @@ button {
 }
 
 .demo-items-wrapper {
-
   padding: 0 8%;
+
+  .demo-items {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 16px;
+    width: 100%;
+  }
 
   h2 {
     display: block;
@@ -1030,14 +1037,14 @@ button {
 
   .demo-item {
     font-family: Montserrat, sans-serif;
-    flex: 0 0 32%;
+    flex: 1 0 49%;
     max-width: 600px;
     border: 1px solid rgba(0,0,0,.12);
     border-radius: 6px;
     padding: 12px;
     font-size: 22px;
     font-weight: 500;
-    min-width: 250px;
+    min-width: 600px;
     box-shadow: 8px 8px 16px -6px #0000001a;
     border-radius: 5px;
     transition: box-shadow .13s linear, transform .13s linear;
