--- a/package/zerobias/example-nextjs/styles/styles.scss
+++ b/package/zerobias/example-nextjs/styles/styles.scss
@@ -111,19 +111,103 @@ h1, h2, h3, h4, h5 {
   }
 }
 
-/* TABS */
-.Tab {
-  background-color: #f0f0f0;
-  border-bottom: 2px solid #ccc;
-  padding: 10px;
+
+.content-padding {
+  padding: 0 8%;
 }
 
-.Tab.active {
-  background-color: #fff;
-  border-bottom: 2px solid #337ab7;
-  padding: 10px;
+.toolbar {
+  display: flex;
+  box-sizing: border-box;
+  width: 100%;
+  flex-direction: column;
+  align-items: flex-start;
+  white-space: nowrap;
+  height: 68px;
+  background: #000;
+  gap: 8px;
+  padding: 0;
+  justify-content: flex-end;
+  min-height: 64px;
+}
+.app-bar {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 8px;
+  flex-grow: 1;
+  justify-content: flex-end;
+  margin: 0px 16px 0;
+  padding: 8px 0 0;
+  width: calc(100% - 32px);
+  h1 {
+    font-family: Montserrat, sans-serif;
+    color: #fff;
+    max-width: 200px;
+    min-width: 100px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 22px;
+    min-width: 500px;
+    padding: 0 16px;
+  }
+}
+.zerobias-bar {
+  background: #03aff0;
+  background: linear-gradient(90deg, #03aff0 25%, #232323 75%);
+  width: 100%;
+  height: 4px;
+  position: absolute;
 }
 
+.avatar-text-wrapper span.avatar-label-label {
+  font-size: 14px;
+  line-height: 1.3;
+  font-weight: 400;
+}
+
+.user-icon-dropdown {
+  margin-top: 5px;
+}
+
+.user-dropdown {
+  display: flex;
+  border-left: 1px solid #333;
+  padding-left: 25px;
+}
+
+.user-switcher-dropdown {
+  position: absolute;
+  top: 600px;
+  width: 200px;
+}
+
+.user-dropdown-list {
+  position: absolute;
+  top: 46px;
+  right: -20px;
+  width: 240px;
+}
+
+.user-dropdown-list .mat-mdc-option {
+  padding-left: 0;
+}
+
+.arrow_drop_down {
+  width: 0; 
+  height: 0; 
+  border-left: 4px solid transparent;
+  border-right: 4px solid transparent;
+  border-top: 4px solid rgb(32, 32, 32);
+}
+
+label {
+  font-size: 16px;
+  font-weight: 400;
+}
 
 /* PKV */
 .pkv-demo {
@@ -210,19 +294,35 @@ h1, h2, h3, h4, h5 {
   }
 }
 
-.select-wrappper{
+.select-wrapper{
   max-width: 500px;
 }
 
+.themed-select {
 
-.menu-wrap {
-  display: flex;
-  flex-direction: row;
-  flex-grow: 1;
-  width: 100%;
-  outline: 1px solid cyan;
+  .select__control {
+    &.select__control--menu-is-open {
+      border-color: var(--action-color-primary);
+      box-shadow: 0 0 0 1px var(--action-color-primary);
+    }
+    &.select__control--is-focused {
+      border-color: var(--action-color-primary);
+      box-shadow: 0 0 0 1px var(--action-color-primary);
+    }
+  }
+
+  .select__menu {
+    .select__option {
+      &.select__option--is-focused {
+        background-color: rgba(0, 0, 0, .04);
+      }
+      &.select__option--is-selected {
+        background-color: var(--action-color-primary);
+      }
+    } 
+  }
+
 }
-
 
 .main-tabs-wrapper {
 
@@ -321,7 +421,6 @@ h1, h2, h3, h4, h5 {
   }
 }
 
-
 .modal {
   display: none;
   height: auto;
@@ -372,7 +471,6 @@ h1, h2, h3, h4, h5 {
     }
   }
 }
-
 
 form.zb-form {
   display: flex;
@@ -442,9 +540,7 @@ form.zb-form {
     }
   }
 
-
 }
-
 
 .menu-item {
   line-height: 40px;
@@ -899,8 +995,6 @@ button {
     }
   }
 
-
-
   .nf-organization-switcher {
     cursor: pointer;
 
@@ -914,6 +1008,18 @@ button {
           padding:0;
         }
       }
+
+      .select__menu {
+        .select__option {
+          &.select__option--is-focused {
+            background-color: rgba(0, 0, 0, .04);
+          }
+          &.select__option--is-selected {
+            background-color: var(--action-color-primary);
+          }
+        } 
+      }
+
       .org-item {
         display: flex;
         align-items: center;
@@ -1141,6 +1247,18 @@ button {
 .content-wrapper .demo-item {
   width: 100%;
   padding-bottom: 32px;
+
+  .dual-container {
+    display: flex;
+    flex-direction: row;
+    flex: 1 1;
+    .container-left {
+      width: 50%;
+    }
+    .container-right {
+      width: 50%;
+    }
+  }
   
   table.table {
     width: 100%;
@@ -1179,6 +1297,16 @@ button {
       .product-name {
         font-weight: 500;
         white-space: nowrap;
+      }
+    }
+  }
+
+  section {
+    h3 {
+      span {
+        font-size: 12px;
+        line-height: 20px;
+        font-weight: 400;
       }
     }
   }
